# vdw-orchestrator

./: AGENTS-TODO.md  AGENTS.md  COMPLETION-STATUS.md  Dockerfile  FIXES_APPLIED.md  LICENSE  MCP_SETUP_GUIDE.md  PROGRESS.md  QWEN_SETUP.md  README.md  README_MCP.md  TEST_REPORT.md  WINDOWS_SETUP.md  docker-compose.dev.yml  docker-compose.yml  main.py  mcp_wrapper.py  pyproject.toml  qwen_mcp_config.json  requirements.txt  start_vdw.bat  start_vdw.ps1  start_vdw.sh  test_system.sh  vdw_mcp_server.py
agents/: AGENTS.md  TODO.md  base_phase_agent.py  meta_review_agent.py  phase_1_mood.py  phase_2_architecture.py  phase_3_specification.py  phase_4_implementation.py  phase_5_validation.py
core/: AGENTS.md  TODO.md  __init__.py  api.py  event_bus.py  memory_store.py  metrics.py  models.py  orchestrator.py  state_machine.py  tool_registry.py  tools_api.py  tools_gaps_api.py
database/: schema.sql
database/migrations/: 001_initial_schema.sql
docs/: advanced-enhancements.md  architecture.md  implementation-blueprint.md  mcp-production-best-practices.md  metrics-and-tests.md  phase-12-documentation.md  phase-13-continuous-calibration.md  phase-14-production-hardening.md  phase-15-final-release.md  research-findings.md
mangle/: Dockerfile  go.mod  reasoning_rules.dl
mangle/config/: .gitkeep
monitoring/: __init__.py  calibration_engine.py  metrics_collector.py  prometheus.yml
reasoning/: AGENTS.md  TODO.md  __init__.py  _distiller_metrics_patch.py  conversation_distiller.py  mangle_client.py
scripts/: build_grpc_stubs.sh
tests/: test_conversation_distiller.py
(+30 files in other folders)
